--- a/#Backend/package.json
+++ b/#Backend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/socket.io": "^2.1.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
@@ -15,9 +16,12 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.2.1",
     "mongoose-schema-formatdate": "^1.0.0",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "socket.io": "^2.2.0"
   }
 }
